# collatable

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
collatable/: __init__.py  collator.py  instance.py  typing.py  util.py  utils.py
collatable/extras/: __init__.py  dataloader.py  datamodule.py  dataset.py  indexer.py
collatable/fields/: __init__.py  adjacency_field.py  field.py  index_field.py  label_field.py  list_field.py  mapping_field.py  metadata_field.py  scalar_field.py  sequence_field.py  sequence_label_field.py  span_field.py  tensor_field.py  text_field.py
src/collatable/: __init__.py  collator.py  types.py  utils.py
src/collatable/extras/: __init__.py  dataloader.py  datamodule.py  dataset.py  indexer.py
src/collatable/fields/: __init__.py  adjacency_field.py  field.py  index_field.py  label_field.py  list_field.py  mapping_field.py  scalar_field.py  sequence_field.py  sequence_label_field.py  span_field.py  tensor_field.py  text_field.py
tests/: test_collatable.py  test_collator.py  test_instance.py
tests/extras/: test_dataloader.py  test_datamodule.py  test_dataset.py  test_indexer.py
tests/fields/: test_adjacency_field.py  test_index_field.py  test_label_field.py  test_list_field.py  test_mapping_field.py  test_metadata_field.py  test_scalar_field.py  test_sequence_label_field.py  test_span_field.py  test_tensor_field.py  test_text_field.py
