[project]
name = "collatable"
version = "0.5.0"
description = "Constructing batched tensors for any machine learning tasks"
authors = [
    {name="altescy", email="me@altescy.jp"},
]
license = "MIT"
readme = "README.md"
keywords = ["python", "machine learning"]
requires-python = ">=3.8,<4.0"
dependencies = [
    "numpy>=1.0.0,<1.26.4; python_version < '3.9'",
    "numpy>=1.26.4; python_version >= '3.9'",
]

[project.urls]
Homepage = "https://github.com/altescy/collatable"
Issues = "https://github.com/altescy/collatable/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.9.0"]
build-backend = "uv_build"
